--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-dev-treeview",
-  "version": "1.2.1",
+  "version": "1.3",
   "description": "React Native development support tools on the screen explorer value what you want.",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,6 @@
     "url": "git+https://github.com/SniperAK/react-native-dev-tree-view.git"
   },
   "keywords": [
-    "react-native-treeview",
     "react-native-dev-tree-view"
   ],
   "author": "SniperAK",
@@ -19,8 +18,5 @@
   "bugs": {
     "url": "https://github.com/SniperAK/react-native-dev-tree-view/issues"
   },
-  "homepage": "https://github.com/SniperAK/react-native-dev-tree-view#readme",
-  "dependencies": {
-    "react-native-triangle-view": "^1.0.0"
-  }
+  "homepage": "https://github.com/SniperAK/react-native-dev-tree-view#readme"
 }
