--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "react-native-dev-treeview",
-  "version": "1.3",
+  "version": "1.4.0",
   "description": "React Native development support tools on the screen explorer value what you want.",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "module": "lib/index.js",
+  "typings": "lib/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:src": "rm -rf ./lib && tsc -p src/tsconfig.json && babel lib --out-dir lib",
+    "build": "npm run build:src",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -18,5 +23,43 @@
   "bugs": {
     "url": "https://github.com/SniperAK/react-native-dev-tree-view/issues"
   },
-  "homepage": "https://github.com/SniperAK/react-native-dev-tree-view#readme"
+  "homepage": "https://github.com/SniperAK/react-native-dev-tree-view#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.6.2",
+    "@babel/core": "^7.6.2",
+    "@babel/node": "^7.7.7",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.7.5",
+    "@babel/plugin-transform-react-jsx": "^7.8.3",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/preset-react": "^7.7.4",
+    "@types/lodash": "^4.14.149",
+    "@types/react": "^16.9.31",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-native": "0.61.12",
+    "@typescript-eslint/eslint-plugin": "^2.23.0",
+    "@typescript-eslint/parser": "^2.23.0",
+    "babel-eslint": "^10.0.3",
+    "babel-plugin-inline-import-data-uri": "^1.0.1",
+    "esifycss": "^1.4.12",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-react-native-shinpei": "^0.2.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-json": "^2.1.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^2.5.0",
+    "eslint-plugin-react-native": "^3.8.1",
+    "jest": "^25.1.0",
+    "prettier": "^1.19.1",
+    "react": "*",
+    "react-native": "*",
+    "ts-jest": "^25.2.0",
+    "ts-node": "^8.6.2",
+    "tslib": "^2.2.0",
+    "typescript": "^3.8.3"
+  }
 }
